# drf-sendables

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  runtests.py  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: api.rst  conf.py  custom.rst  exchangeables.rst  index.rst  requirements.txt  settings.rst
docs/_static/: style.css
sendables/: __init__.py  apps.py  urls.py
sendables/core/: __init__.py  apps.py  mixins.py  models.py  serializers.py  settings.py  types.py  urls.py  utils.py  views.py
sendables/core/policies/: filter.py  list.py  select.py  send.py
sendables/messages/: __init__.py  apps.py  models.py  serializers.py  urls.py
sendables/notices/: __init__.py  apps.py  models.py  urls.py
tests/: models.py  settings.py  test_delete.py  test_delete_sent.py  test_detail.py  test_detail_sent.py  test_list.py  test_list_marked.py  test_list_sent.py  test_mark.py  test_send.py  types.py  urls.py  utils.py
