[metadata]
name = drf-sendables
version = attr: sendables.__version__
author = Aristotelis Mikropoulos
author_email = amikrop@gmail.com
description = User messages for Django REST Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/amikrop/drf-sendables
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.10
install_requires = djangorestframework>=3.10,<3.16

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = migrations

[isort]
profile = black
skip = migrations

[mypy]
strict = true
warn_unreachable = true
disallow_any_generics = false
plugins = mypy_django_plugin.main
exclude = migrations

[mypy.plugins.django-stubs]
django_settings_module = "tests.settings"
